--- a/MauiBudgetApp/MauiBudgetApp.csproj
+++ b/MauiBudgetApp/MauiBudgetApp.csproj
@@ -51,6 +51,7 @@
 
 	<ItemGroup>
 	  <None Remove="Resources\Images\back.png" />
+	  <None Remove="Resources\Images\checkmark.png" />
 	  <None Remove="Resources\Images\cog.png" />
 	  <None Remove="Resources\Images\diskette.png" />
 	  <None Remove="Resources\Images\trash.png" />
