Added MVVM.Community.Toolkit to simplify MVVM

--- a/MauiBudgetApp/MauiBudgetApp.csproj
+++ b/MauiBudgetApp/MauiBudgetApp.csproj
@@ -72,6 +72,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
 		<PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
 		<PackageReference Include="SQLiteNetExtensions.Async" Version="2.1.0" />
 		<PackageReference Include="SQLitePCLRaw.core" Version="2.1.0-pre20220207221914" />
