Changed splash background color & fixed emptied list issue

--- a/MauiBudgetApp/MauiBudgetApp.csproj
+++ b/MauiBudgetApp/MauiBudgetApp.csproj
@@ -39,7 +39,7 @@
 		<MauiIcon Include="Resources\AppIcon\icon.png" />
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
+		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#3366ff" BaseSize="128,128" />
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
