Added settings with option for reset paid on day of the month

--- a/MauiBudgetApp/MauiBudgetApp.csproj
+++ b/MauiBudgetApp/MauiBudgetApp.csproj
@@ -113,6 +113,9 @@
 	  <MauiXaml Update="Views\PayItemListPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\SettingsView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
