--- a/MauiBudgetApp/Platforms/Android/AndroidManifest.xml
+++ b/MauiBudgetApp/Platforms/Android/AndroidManifest.xml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
-	<application android:allowBackup="true" android:icon="@mipmap/iconnew" android:roundIcon="@mipmap/iconnew" android:supportsRtl="true"></application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" android:versionCode="1" android:versionName="1.0">
+	<application android:allowBackup="true" android:icon="@mipmap/iconnew" android:roundIcon="@mipmap/iconnew" android:supportsRtl="true" android:label="Budget App By MKD"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="33" />
 </manifest>
